# MindGambit

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build-debug.yml  build-release.yml
app/: build.gradle.kts  google-services-1.json  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mindgambit/app/: MainActivity.kt  MindGambitApp.kt
app/src/main/java/com/mindgambit/app/core/di/: Modules.kt
app/src/main/java/com/mindgambit/app/core/utils/: EloCalculator.kt
app/src/main/java/com/mindgambit/app/data/database/: MindGambitDatabase.kt
app/src/main/java/com/mindgambit/app/data/engine/: StockfishEngine.kt
app/src/main/java/com/mindgambit/app/data/repository/: EloRepositoryImpl.kt  GameRepositoryImpl.kt  OpeningRepositoryImpl.kt  PuzzleRepositoryImpl.kt
app/src/main/java/com/mindgambit/app/domain/model/: ChessPiece.kt  ChessPosition.kt  EloRating.kt  FenParser.kt  Game.kt  Move.kt
app/src/main/java/com/mindgambit/app/domain/repository/: Repositories.kt
app/src/main/java/com/mindgambit/app/domain/usecase/: UseCases.kt
app/src/main/java/com/mindgambit/app/presentation/board/: BoardScreen.kt  BoardViewModel.kt
app/src/main/java/com/mindgambit/app/presentation/components/: MindGambitBottomBar.kt
app/src/main/java/com/mindgambit/app/presentation/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/mindgambit/app/presentation/ladder/: LadderScreen.kt
app/src/main/java/com/mindgambit/app/presentation/navigation/: NavGraph.kt
app/src/main/jni/: CMakeLists.txt  bridge.cpp
app/src/main/jni/stockfish/: stockfish_stub.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/font/: cormorant_garamond_bold.xml  cormorant_garamond_bold_italic.xml  cormorant_garamond_italic.xml  cormorant_garamond_regular.xml  cormorant_garamond_semibold.xml  cormorant_garamond_semibold_italic.xml  dm_mono_medium.xml  dm_mono_regular.xml  dm_sans_light.xml  dm_sans_semibold.xml
app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  preloaded_fonts.xml
app/src/test/java/com/mindgambit/app/: EloCalculatorTest.kt  FenParserTest.kt  MoveTest.kt  TierTest.kt
gradle/: libs.versions.toml
scripts/: download_fonts.sh  download_stockfish.sh  setup.sh
(+11 files in other folders)
